adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, mundo</h1>
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum ex culpa ullam voluptatem fuga nam nesciunt temporibus corporis harum, non mollitia ducimus atque vitae molestiae perferendis maiores architecto eum suscipit.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quas quasi voluptatem impedit dicta aliquam, error animi saepe fugiat iure, quia vel esse fuga nisi ad eum nihil deleniti similique.</p>
 </body>
 </html>
